fixed bottom grid not aligning properly

--- a/NeocronWorldMap.Web/Assets/Stylesheets/Site.css
+++ b/NeocronWorldMap.Web/Assets/Stylesheets/Site.css
@@ -5,7 +5,7 @@ h2{ margin: 0;}
 
 .page-title {padding: 10px 0 20px 15px; }
 
-.world-grid{ min-width: 962px;height: 673px;margin-left: auto;margin-right: auto;background: url("../Images/worldmap.jpg") no-repeat;border-top: #957C03 2px solid;border-bottom: #957C03 2px solid;}
+.world-grid{ min-width: 962px;height: 680px;margin-left: auto;margin-right: auto;background: url("../Images/worldmap.jpg") no-repeat;border-top: #957C03 2px solid;border-bottom: #957C03 2px solid;}
     .world-grid .hover td:hover {padding: 0;background: #ddd;background: rgba(224, 224, 224, 0.5);border: 1px dashed #ddd;cursor: pointer;}
         .world-grid .hover td a { font-size: 0.5em;}
 
